--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "zalwicker.dev": {
+    "zalwickerdev": {
       "projectType": "application",
       "schematics": {},
       "root": "",
